cuda_backend/build.log
running build_ext
W0611 21:23:26.092000 3149 site-packages/torch/utils/cpp_extension.py:546] The detected CUDA version (13.1) has a minor version mismatch with the version that was used to compile PyTorch (13.0). Most likely this shouldn't be a problem.
W0611 21:23:26.092000 3149 site-packages/torch/utils/cpp_extension.py:556] There are no g++ version bounds defined for CUDA version 13.1
building 'paged_attention_cuda' extension
creating /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/build/temp.linux-x86_64-cpython-313
[1/2] /usr/local/cuda/bin/nvcc -MD -MF /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/build/temp.linux-x86_64-cpython-313/paged_attention_kernel.o.d -I/home/joshp/miniforge3/lib/python3.13/site-packages/torch/include -I/home/joshp/miniforge3/lib/python3.13/site-packages/torch/include/torch/csrc/api/include -I/usr/local/cuda/include -I/home/joshp/miniforge3/include/python3.13 -c -c /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/paged_attention_kernel.cu -o /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/build/temp.linux-x86_64-cpython-313/paged_attention_kernel.o -D__CUDA_NO_HALF_OPERATORS__ -D__CUDA_NO_HALF_CONVERSIONS__ -D__CUDA_NO_BFLOAT16_CONVERSIONS__ -D__CUDA_NO_HALF2_OPERATORS__ --expt-relaxed-constexpr --compiler-options ''"'"'-fPIC'"'"'' -O3 -DTORCH_API_INCLUDE_EXTENSION_H -DTORCH_EXTENSION_NAME=paged_attention_cuda -gencode=arch=compute_89,code=compute_89 -gencode=arch=compute_89,code=sm_89 -std=c++20
FAILED: /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/build/temp.linux-x86_64-cpython-313/paged_attention_kernel.o 
/usr/local/cuda/bin/nvcc -MD -MF /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/build/temp.linux-x86_64-cpython-313/paged_attention_kernel.o.d -I/home/joshp/miniforge3/lib/python3.13/site-packages/torch/include -I/home/joshp/miniforge3/lib/python3.13/site-packages/torch/include/torch/csrc/api/include -I/usr/local/cuda/include -I/home/joshp/miniforge3/include/python3.13 -c -c /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/paged_attention_kernel.cu -o /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/build/temp.linux-x86_64-cpython-313/paged_attention_kernel.o -D__CUDA_NO_HALF_OPERATORS__ -D__CUDA_NO_HALF_CONVERSIONS__ -D__CUDA_NO_BFLOAT16_CONVERSIONS__ -D__CUDA_NO_HALF2_OPERATORS__ --expt-relaxed-constexpr --compiler-options ''"'"'-fPIC'"'"'' -O3 -DTORCH_API_INCLUDE_EXTENSION_H -DTORCH_EXTENSION_NAME=paged_attention_cuda -gencode=arch=compute_89,code=compute_89 -gencode=arch=compute_89,code=sm_89 -std=c++20
/mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/paged_attention_kernel.cu(125): error: expected a ";"
              }
              ^

1 error detected in the compilation of "/mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/paged_attention_kernel.cu".
[2/2] c++ -MMD -MF /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/build/temp.linux-x86_64-cpython-313/paged_attention.o.d -pthread -B /home/joshp/miniforge3/share/python_compiler_compat -fno-strict-overflow -Wsign-compare -DNDEBUG -O2 -Wall -fPIC -O2 -isystem /home/joshp/miniforge3/include -fPIC -O2 -isystem /home/joshp/miniforge3/include -fPIC -I/home/joshp/miniforge3/lib/python3.13/site-packages/torch/include -I/home/joshp/miniforge3/lib/python3.13/site-packages/torch/include/torch/csrc/api/include -I/usr/local/cuda/include -I/home/joshp/miniforge3/include/python3.13 -c -c /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/paged_attention.cpp -o /mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/build/temp.linux-x86_64-cpython-313/paged_attention.o -O3 -DTORCH_API_INCLUDE_EXTENSION_H -DTORCH_EXTENSION_NAME=paged_attention_cuda -std=c++20
ninja: build stopped: subcommand failed.
Traceback (most recent call last):
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/torch/utils/cpp_extension.py", line 2782, in _run_ninja_build
    subprocess.run(
    ~~~~~~~~~~~~~~^
        command,
        ^^^^^^^^
    ...<4 lines>...
        check=True,
        ^^^^^^^^^^^
        env=env)
        ^^^^^^^^
  File "/home/joshp/miniforge3/lib/python3.13/subprocess.py", line 577, in run
    raise CalledProcessError(retcode, process.args,
                             output=stdout, stderr=stderr)
subprocess.CalledProcessError: Command '['ninja', '-v']' returned non-zero exit status 1.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/mnt/c/Users/joshp_ya/VSCodeProjects/Personal/portfolio/llm-inference-systems-lab/inference-server/cuda_backend/setup.py", line 5, in <module>
    setup(
    ~~~~~^
        name="paged_attention_cuda",
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<15 lines>...
        },
        ^^
    )
    ^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/__init__.py", line 117, in setup
    return distutils.core.setup(**attrs)  # type: ignore[return-value]
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/_distutils/core.py", line 186, in setup
    return run_commands(dist)
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/_distutils/core.py", line 202, in run_commands
    dist.run_commands()
    ~~~~~~~~~~~~~~~~~^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/_distutils/dist.py", line 1000, in run_commands
    self.run_command(cmd)
    ~~~~~~~~~~~~~~~~^^^^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/dist.py", line 1107, in run_command
    super().run_command(command)
    ~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/_distutils/dist.py", line 1019, in run_command
    cmd_obj.run()
    ~~~~~~~~~~~^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/command/build_ext.py", line 97, in run
    _build_ext.run(self)
    ~~~~~~~~~~~~~~^^^^^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/_distutils/command/build_ext.py", line 367, in run
    self.build_extensions()
    ~~~~~~~~~~~~~~~~~~~~~^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/torch/utils/cpp_extension.py", line 1184, in build_extensions
    build_ext.build_extensions(self)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/_distutils/command/build_ext.py", line 483, in build_extensions
    self._build_extensions_serial()
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/_distutils/command/build_ext.py", line 509, in _build_extensions_serial
    self.build_extension(ext)
    ~~~~~~~~~~~~~~~~~~~~^^^^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/command/build_ext.py", line 262, in build_extension
    _build_ext.build_extension(self, ext)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/setuptools/_distutils/command/build_ext.py", line 564, in build_extension
    objects = self.compiler.compile(
        sources,
    ...<5 lines>...
        depends=ext.depends,
    )
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/torch/utils/cpp_extension.py", line 924, in unix_wrap_ninja_compile
    _write_ninja_file_and_compile_objects(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        sources=sources,
        ^^^^^^^^^^^^^^^^
    ...<11 lines>...
        with_cuda=with_cuda,
        ^^^^^^^^^^^^^^^^^^^^
        with_sycl=with_sycl)
        ^^^^^^^^^^^^^^^^^^^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/torch/utils/cpp_extension.py", line 2364, in _write_ninja_file_and_compile_objects
    _run_ninja_build(
    ~~~~~~~~~~~~~~~~^
        build_directory,
        ^^^^^^^^^^^^^^^^
    ...<2 lines>...
        # that failed to build but there isn't a good way to get it here.
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        error_prefix='Error compiling objects for extension')
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/joshp/miniforge3/lib/python3.13/site-packages/torch/utils/cpp_extension.py", line 2799, in _run_ninja_build
    raise RuntimeError(message) from e
RuntimeError: Error compiling objects for extension
